tests/paczka1/fuzzy1/12463659.err
Error in line 8: A6}2 S264 71,0
Error in line 4: A682 A383 38,6
Error in line 10: A682 S264 20,3
Error in line 20: 6x5XWbaua A962 98,3
Error in line 16: o1w A962 759,7
Error in line 25: 6x5XWbaua A383 60,9
Error in line 26: o1w S264 13,6
